jobs/study swap #fix

--- a/index.html
+++ b/index.html
@@ -52,20 +52,6 @@
             </div>
             <div class="text-block">
               <div class="text-header">
-                <span class="date">2016-2018</span>
-                <span class="company-name">Yamobail.ru</span>
-                <span class="position">Контент-менеджер</span>
-              </div>
-              <div>
-                <ul>
-                  <li>- Наполнение сайта товарными позициями</li>
-                  <li>- Написание VBA скриптов для Excel листов</li>
-                  <li>- Написание SQL запросов для обработки продукции</li>
-                </ul>
-              </div>
-            </div>
-            <div class="text-block">
-              <div class="text-header">
                 <span class="date">2018-NOW</span>
                 <span class="company-name">Arcsinus</span>
                 <span class="position">Тестировщик</span>
@@ -75,6 +61,20 @@
                   <li>- Тестирование мобильного ПО iOS/Android</li>
                   <li>- Тестирование Web приложений (Front/Back)</li>
                   <li>- Подготовка тестовой и отчетной документации</li>
+                </ul>
+              </div>
+            </div>
+            <div class="text-block">
+              <div class="text-header">
+                <span class="date">2016-2018</span>
+                <span class="company-name">Yamobail.ru</span>
+                <span class="position">Контент-менеджер</span>
+              </div>
+              <div>
+                <ul>
+                  <li>- Наполнение сайта товарными позициями</li>
+                  <li>- Написание VBA скриптов для Excel листов</li>
+                  <li>- Написание SQL запросов для обработки продукции</li>
                 </ul>
               </div>
             </div>
@@ -129,15 +129,6 @@
               </div>
               <div class="hr-label"></div>
             </div>
-            <div class="text-block">
-              <div class="text-header">
-                <span class="date">2000-2011</span>
-              </div>
-              <div>
-                Муниципальное бюджетное общеобразовательное учреждение - средняя
-                общеобразовательная школа №2 г. Орла
-              </div>
-            </div>
 
             <div class="text-block">
               <div class="text-header">
@@ -151,6 +142,18 @@
                 Прикладная информатика в экономике
               </div>
             </div>
+
+            <div class="text-block">
+              <div class="text-header">
+                <span class="date">2000-2011</span>
+                <span class="company-name" style="margin-bottom: 10px;">Общее среднее образование</span>
+              </div>
+              <div>
+                Муниципальное бюджетное общеобразовательное учреждение - средняя
+                общеобразовательная школа №2 г. Орла
+              </div>
+            </div>
+
           </div>
 
           <div class="skills">
